[gd_scene load_steps=4 format=3 uid="uid://dpo40s8065wkx"]

[ext_resource type="Script" uid="uid://d25k2wqra5wqq" path="res://ui/menu.gd" id="1_q23uf"]
[ext_resource type="Texture2D" uid="uid://nbg0cnufie8x" path="res://icon.png" id="2_4c782"]
[ext_resource type="Script" uid="uid://ka0sf6v4nu1l" path="res://ui/lobby.gd" id="2_7msyv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q23uf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4c782")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = 236.0
offset_right = 51.0
offset_bottom = -236.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "New Game"

[node name="Button" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "    Trening    "

[node name="Settings" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings "

[node name="Settings2" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings 2"

[node name="Exit" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Exit"

[node name="Lobby" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_7msyv")
metadata/_custom_type_script = "uid://ka0sf6v4nu1l"

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="button_down" from="TextureRect/VBoxContainer/NewGame" to="." method="new_game"]
[connection signal="button_down" from="TextureRect/VBoxContainer/Button" to="." method="training"]
[connection signal="button_down" from="TextureRect/VBoxContainer/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="TextureRect/VBoxContainer/Settings2" to="." method="_on_settings_2_button_down"]
[connection signal="button_down" from="TextureRect/VBoxContainer/Exit" to="." method="_on_exit_button_down"]
